# mastodon-to-sqlite

./: .gitignore  Makefile  README.md  metadata.json  pyproject.toml
.github/workflows/: ci.yml  jit-security.yml  release.yml
.jit/: jit-plan.yml
mastodon_to_sqlite/: cli.py  client.py  service.py
tests/: conftest.py  fixture-auth.json  fixtures.py  test_cli.py  test_client.py  test_services.py
