[tool.poetry]
name = "mastodon-to-sqlite"
version = "0.1.0"
description = "Save data from Mastodon to a SQLite database"
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/myles/mastodon-to-sqlite"
keywords = ["mastodon", "sqlite", "dogsheep"]

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils = "^3.30"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
responses = "^0.22.0"
mypy = "^0.991"
types-requests = "^2.28.11.7"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
mastodon-to-sqlite = "mastodon_to_sqlite.cli:cli"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
