[tool.poetry]
name = "mastodon-to-sqlite"
version = "0.2.1"
description = "Save data from Mastodon to a SQLite database"
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/myles/mastodon-to-sqlite"
keywords = ["mastodon", "sqlite", "dogsheep"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"
sqlite-utils = "^3.36"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.13.2"
mypy = "^0.991"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
responses = "^0.22.0"
ruff = "^0.0.254"
types-requests = "^2.31.0.20240125"

[tool.poetry.group.datasette.dependencies]
datasette = "^0.64.6"
datasette-render-html = "^1.0"

[tool.poetry.scripts]
mastodon-to-sqlite = "mastodon_to_sqlite.cli:cli"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
